--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+alibabacloud_darabonba_stream==0.0.1
 alibabacloud_ocr_api20210707==2.0.4
 alibabacloud_tea_openapi==0.3.8
 alibabacloud_tea_util==0.3.11
-openai==1.12.0
+gradio==4.19.2
+openai==0.27.8
